# dogUARTPyComms

dogUARTPackage/: README.md  setup.cfg
dogUARTPackage/src/dog_pi_comm/: __init__.py  piMasterUART.py  test.py
dogUARTPackage/src/dog_uart_sschoedel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dogUARTPackage/tests/: __init__.py  test_connect.py
