[metadata]
name = dog-uart-sschoedel
version = 0.1.1
author = Sam Schoedel
author_email = seschoedel@gmail.com
description = Interface to control dog from Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sschoedel/dogUARTPyComms
project_urls = 
    Bug Tracker = https://github.com/sschoedel/dogUARTPyComms/issues
classifiers =
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src